upload one project

--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
               <a href="https://github.com/siha2/image_slider" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
+          <div class="all tutorials">
+            <img src="images/projects/tut7.png" alt="photo">
+            <div class="info">
+              <h3>Tasks App</h3>
+              <a href="https://siha2.github.io/tasks_app/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/tasks_app" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
