--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
               <a href="https://github.com/siha2/quiz_app" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
+          <div class="all websites">
+            <img src="images/projects/tem5.png" alt="photo">
+            <div class="info">
+              <h3>Template</h3>
+              <a href="https://siha2.github.io/special_design/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/special_design" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
           <div class="all tutorials">
             <img src="images/projects/tut5.png" alt="photo">
             <div class="info">
