upload a new project

--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
               <a href="https://github.com/siha2/hangman" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
+          <div class="all websites">
+            <img src="images/projects/tem6.png" alt="photo">
+            <div class="info">
+              <h3>Template</h3>
+              <a href="https://siha2.github.io/bondi/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/bondi" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
           <div class="all tutorials">
             <img src="images/projects/tut6.png" alt="photo">
             <div class="info">
