--- a/index.html
+++ b/index.html
@@ -98,6 +98,26 @@
           <div class="progress">
             <span style="width: 0" data-width="80%"></span>
           </div>
+          <h6>Bootstrap</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="75%"></span>
+          </div>
+          <h6>SASS</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="90%"></span>
+          </div>
+          <h6>Vue.js</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="80%"></span>
+          </div>
+          <h6>Git</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="90%"></span>
+          </div>
+          <h6>Github</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="90%"></span>
+          </div>
         </div>
       </div>
     </div>
