add a new skill

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
           <div class="progress">
             <span style="width: 0" data-width="90%"></span>
           </div>
+          <h6>Pugjs</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="90%"></span>
+          </div>
           <h6>Vue.js</h6>
           <div class="progress">
             <span style="width: 0" data-width="80%"></span>
