--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
           <div class="progress">
             <span style="width: 0" data-width="90%"></span>
           </div>
+          <h6>Gulpjs</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="90%"></span>
+          </div>
+          <h6>Jest</h6>
+          <div class="progress">
+            <span style="width: 0" data-width="90%"></span>
+          </div>
           <h6>Vue.js</h6>
           <div class="progress">
             <span style="width: 0" data-width="80%"></span>
