--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <header class="header sec" id="header">
     <div class="container">
       <ul>
-        <li><a href="https://www.linkedin.com/in/abdelmaseeh-emad-78499b261/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href="https://github.com/siha2" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/abdelmaseeh-emad-78499b261/" target="_blank"><i class="fa-brands fa-linkedin linkedin"></i></a></li>
+        <li><a href="https://github.com/siha2" target="_blank"><i class="fa-brands fa-github github"></i></a></li>
+        <li><a href="https://wa.me/+201203067372" target="_blank"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
       </ul>
       <div class="content">
         <p>Hello, I am</p>
@@ -69,10 +70,14 @@
             <li>
               <span>Address</span> : Cairo, Egypt
             </li>
+            <li>
+              <span>Phone</span> : +201203067372
+            </li>
           </ul>
           <ul class="social">
-            <li><a href="https://www.linkedin.com/in/abdelmaseeh-emad-78499b261/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/siha2" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/abdelmaseeh-emad-78499b261/" target="_blank"><i class="fa-brands fa-linkedin linkedin"></i></a></li>
+            <li><a href="https://github.com/siha2" target="_blank"><i class="fa-brands fa-github github"></i></a></li>
+            <li><a href="https://wa.me/+201203067372" target="_blank"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
           </ul>
         </div>
       </div>
@@ -241,14 +246,6 @@
               <a href="https://github.com/siha2/image_slider" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
-          <div class="all websites">
-            <img src="images/projects/tem7.png" alt="photo">
-            <div class="info">
-              <h3>Template</h3>
-              <a href="https://siha2.github.io/souq/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/souq" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
           <div class="all tutorials">
             <img src="images/projects/tut7.png" alt="photo">
             <div class="info">
@@ -354,10 +351,14 @@
             <li>
               <span>Address :</span> Cairo, Egypt
             </li>
+            <li>
+              <span>Phone :</span> +201203067372
+            </li>
           </ul>
           <ul class="social">
-            <li><a href="https://www.linkedin.com/in/abdelmaseeh-emad-78499b261/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/siha2" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/abdelmaseeh-emad-78499b261/" target="_blank"><i class="fa-brands fa-linkedin linkedin"></i></a></li>
+            <li><a href="https://github.com/siha2" target="_blank"><i class="fa-brands fa-github github"></i></a></li>
+            <li><a href="https://wa.me/+201203067372" target="_blank"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
           </ul>
         </div>
       </div>
