--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Front-End Developer | Transforming Ideas into Interactive Websites">
   <title>Abdelmaseeh Emad</title>
   <link rel="icon" href="images/main.png">
   <link rel="stylesheet" href="css/main.css">
