--- a/index.html
+++ b/index.html
@@ -247,6 +247,14 @@
               <a href="https://github.com/siha2/image_slider" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
+          <div class="all websites">
+            <img src="images/projects/tem7.png" alt="photo">
+            <div class="info">
+              <h3>Template</h3>
+              <a href="https://siha2.github.io/deutschkurs/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/deutschkurs" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
           <div class="all tutorials">
             <img src="images/projects/tut7.png" alt="photo">
             <div class="info">
