--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="all websites">
             <img src="images/projects/tem1.png" alt="photo">
             <div class="info">
-              <h3>Template</h3>
+              <h3>Leon</h3>
               <a href="https://siha2.github.io/Leon/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/Leon" class="repo" target="_blank">Github Repo</a>
             </div>
@@ -170,7 +170,7 @@
           <div class="all websites">
             <img src="images/projects/tem2.png" alt="photo">
             <div class="info">
-              <h3>Template</h3>
+              <h3>Kasper</h3>
               <a href="https://siha2.github.io/Kasper/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/Kasper" class="repo" target="_blank">Github Repo</a>
             </div>
@@ -186,7 +186,7 @@
           <div class="all websites">
             <img src="images/projects/tem3.png" alt="photo">
             <div class="info">
-              <h3>Template</h3>
+              <h3>Siha</h3>
               <a href="https://siha2.github.io/siha/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/siha" class="repo" target="_blank">Github Repo</a>
             </div>
@@ -202,7 +202,7 @@
           <div class="all websites">
             <img src="images/projects/tem4.png" alt="photo">
             <div class="info">
-              <h3>Template</h3>
+              <h3>Dashboard</h3>
               <a href="https://siha2.github.io/Dashboard/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/Dashboard" class="repo" target="_blank">Github Repo</a>
             </div>
@@ -218,7 +218,7 @@
           <div class="all websites">
             <img src="images/projects/tem5.png" alt="photo">
             <div class="info">
-              <h3>Template</h3>
+              <h3>special design</h3>
               <a href="https://siha2.github.io/special_design/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/special_design" class="repo" target="_blank">Github Repo</a>
             </div>
@@ -234,7 +234,7 @@
           <div class="all websites">
             <img src="images/projects/tem6.png" alt="photo">
             <div class="info">
-              <h3>Template</h3>
+              <h3>bondi</h3>
               <a href="https://siha2.github.io/bondi/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/bondi" class="repo" target="_blank">Github Repo</a>
             </div>
@@ -250,7 +250,7 @@
           <div class="all websites">
             <img src="images/projects/tem7.png" alt="photo">
             <div class="info">
-              <h3>Template</h3>
+              <h3>deutschkurs</h3>
               <a href="https://siha2.github.io/deutschkurs/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/deutschkurs" class="repo" target="_blank">Github Repo</a>
             </div>
@@ -261,6 +261,14 @@
               <h3>Tasks App</h3>
               <a href="https://siha2.github.io/tasks_app/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/tasks_app" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all tutorials">
+            <img src="images/projects/tut8.png" alt="photo">
+            <div class="info">
+              <h3>Guess the word</h3>
+              <a href="https://siha2.github.io/guess_the_word/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/guess_the_word" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
         </div>
