--- a/index.html
+++ b/index.html
@@ -152,6 +152,78 @@
         </ul>
         <div class="projects">
           <div class="all websites">
+            <img src="images/projects/tem7.png" alt="photo">
+            <div class="info">
+              <h3>deutschkurs</h3>
+              <a href="https://siha2.github.io/deutschkurs/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/deutschkurs" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all tutorials">
+            <img src="images/projects/tut8.png" alt="photo">
+            <div class="info">
+              <h3>Guess the word</h3>
+              <a href="https://siha2.github.io/guess_the_word/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/guess_the_word" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all websites">
+            <img src="images/projects/tem8.png" alt="photo">
+            <div class="info">
+              <h3>plumbing</h3>
+              <a href="https://siha2.github.io/plumbing/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/plumbing" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all tutorials">
+            <img src="images/projects/tut5.png" alt="photo">
+            <div class="info">
+              <h3>Hangman Game</h3>
+              <a href="https://siha2.github.io/hangman/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/hangman" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all websites">
+            <img src="images/projects/tem5.png" alt="photo">
+            <div class="info">
+              <h3>special design</h3>
+              <a href="https://siha2.github.io/special_design/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/special_design" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all websites">
+            <img src="images/projects/tem6.png" alt="photo">
+            <div class="info">
+              <h3>bondi</h3>
+              <a href="https://siha2.github.io/bondi/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/bondi" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all websites">
+            <img src="images/projects/tem4.png" alt="photo">
+            <div class="info">
+              <h3>Dashboard</h3>
+              <a href="https://siha2.github.io/Dashboard/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/Dashboard" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all websites">
+            <img src="images/projects/tem3.png" alt="photo">
+            <div class="info">
+              <h3>Siha</h3>
+              <a href="https://siha2.github.io/siha/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/siha" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all websites">
+            <img src="images/projects/tem2.png" alt="photo">
+            <div class="info">
+              <h3>Kasper</h3>
+              <a href="https://siha2.github.io/Kasper/" class="demo" target="_blank">Live Demo</a>
+              <a href="https://github.com/siha2/Kasper" class="repo" target="_blank">Github Repo</a>
+            </div>
+          </div>
+          <div class="all websites">
             <img src="images/projects/tem1.png" alt="photo">
             <div class="info">
               <h3>Leon</h3>
@@ -167,28 +239,12 @@
               <a href="https://github.com/siha2/typing_speed" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
-          <div class="all websites">
-            <img src="images/projects/tem2.png" alt="photo">
-            <div class="info">
-              <h3>Kasper</h3>
-              <a href="https://siha2.github.io/Kasper/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/Kasper" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
           <div class="all tutorials">
             <img src="images/projects/tut2.png" alt="photo">
             <div class="info">
               <h3>Memory Game</h3>
               <a href="https://siha2.github.io/memory_game/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/memory_game" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
-          <div class="all websites">
-            <img src="images/projects/tem3.png" alt="photo">
-            <div class="info">
-              <h3>Siha</h3>
-              <a href="https://siha2.github.io/siha/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/siha" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
           <div class="all tutorials">
@@ -199,44 +255,12 @@
               <a href="https://github.com/siha2/github_repos" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
-          <div class="all websites">
-            <img src="images/projects/tem4.png" alt="photo">
-            <div class="info">
-              <h3>Dashboard</h3>
-              <a href="https://siha2.github.io/Dashboard/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/Dashboard" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
           <div class="all tutorials">
             <img src="images/projects/tut4.png" alt="photo">
             <div class="info">
               <h3>Quiz App</h3>
               <a href="https://siha2.github.io/quiz_app/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/quiz_app" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
-          <div class="all websites">
-            <img src="images/projects/tem5.png" alt="photo">
-            <div class="info">
-              <h3>special design</h3>
-              <a href="https://siha2.github.io/special_design/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/special_design" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
-          <div class="all tutorials">
-            <img src="images/projects/tut5.png" alt="photo">
-            <div class="info">
-              <h3>Hangman Game</h3>
-              <a href="https://siha2.github.io/hangman/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/hangman" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
-          <div class="all websites">
-            <img src="images/projects/tem6.png" alt="photo">
-            <div class="info">
-              <h3>bondi</h3>
-              <a href="https://siha2.github.io/bondi/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/bondi" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
           <div class="all tutorials">
@@ -247,28 +271,12 @@
               <a href="https://github.com/siha2/image_slider" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
-          <div class="all websites">
-            <img src="images/projects/tem7.png" alt="photo">
-            <div class="info">
-              <h3>deutschkurs</h3>
-              <a href="https://siha2.github.io/deutschkurs/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/deutschkurs" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
           <div class="all tutorials">
             <img src="images/projects/tut7.png" alt="photo">
             <div class="info">
               <h3>Tasks App</h3>
               <a href="https://siha2.github.io/tasks_app/" class="demo" target="_blank">Live Demo</a>
               <a href="https://github.com/siha2/tasks_app" class="repo" target="_blank">Github Repo</a>
-            </div>
-          </div>
-          <div class="all tutorials">
-            <img src="images/projects/tut8.png" alt="photo">
-            <div class="info">
-              <h3>Guess the word</h3>
-              <a href="https://siha2.github.io/guess_the_word/" class="demo" target="_blank">Live Demo</a>
-              <a href="https://github.com/siha2/guess_the_word" class="repo" target="_blank">Github Repo</a>
             </div>
           </div>
         </div>
